--- a/Big_School/Content/Site.css
+++ b/Big_School/Content/Site.css
@@ -1,30 +1,36 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿.navbar-inverse {
+    background-color: #f2dede;
+    border-color: black;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    .navbar-inverse .navbar-nar > li > a {
+        color: white;
+    }
+
+    .navbar-inverse .navbar-brand {
+        color: white;
+    }
+
+/*Course layout*/
+.course {
+    list-style: none;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
+    .course > li {
+        position: relative;
+        margin-bottom: 30px;
+    }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
+        .course > li .date {
+            text-align: center;
+            background-color: hotpink;
+            color: black;
+            width: 60px;
+            border-radius: 8px;
+        }
 
-.navbar-inverse .navbar-toggle:hover,
-.navbar-inverse .navbar-toggle:focus {
-    background-color: #777;
-    border-color: #fff
-}
+        .course > li .details {
+            position: absolute;
+            top: 0;
+            left: 70px;
+        }
