--- a/Big_School/Views/Shared/_Layout.cshtml
+++ b/Big_School/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-danger">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" title="more options">
